# so-arm100-robot

./: README.md
soarm100_control/: CMakeLists.txt  package.xml
soarm100_control/config/: soarm100_controllers.yaml
soarm100_control/launch/: controller.launch.py
soarm100_description/: CMakeLists.txt  package.xml
soarm100_description/launch/: display.launch.py
soarm100_description/rviz/: display.rviz
soarm100_description/urdf/: soarm100_5dof.gazebo.xacro  soarm100_5dof.ros2control.xacro  soarm100_5dof.urdf.xacro  soarm100_5dof_base.urdf.xacro
soarm100_gazebo/: CMakeLists.txt  package.xml
soarm100_gazebo/launch/: simulation.launch.py
soarm100_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
soarm100_moveit_config/config/: SO_5DOF_ARM100.ros2_control.xacro  SO_5DOF_ARM100.urdf.xacro  initial_positions.yaml  joint_limits.yaml  moveit_controllers.yaml  ros2_controllers.yaml  soarm100_5dof.srdf
soarm100_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  so100_arm_demo.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
soarm100_simulation/: CMakeLists.txt  package.xml
soarm100_simulation/launch/: simulation.launch.py
